# music-genre-detection

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  run_quality_checks.sh  web_ui.py
.github/workflows/: ci.yml
config/: .flake8  .pylintrc
docs/: Makefile  conf.py  index.rst  modules.rst  src.rst  web_ui.rst
src/: GradCam.py  IG.py  __init__.py  database.py  download_data.py  explainability.py  genre_classifier.py  inference_utils.py  logging_config.py  main.py  mock_classifier.py  model_comparison.py  models.py  temp_file.py
src/preprocessed_cache/: spec_0.npy  spec_1.npy  spec_10.npy  spec_100.npy  spec_101.npy  spec_102.npy  spec_103.npy  spec_104.npy  spec_105.npy  spec_106.npy  spec_107.npy  spec_108.npy  spec_109.npy  spec_11.npy  spec_110.npy  spec_111.npy  spec_112.npy  spec_113.npy  spec_114.npy  spec_115.npy  spec_116.npy  spec_117.npy  spec_118.npy  spec_119.npy  spec_12.npy  spec_120.npy  spec_121.npy  spec_122.npy  spec_123.npy  spec_124.npy  spec_125.npy  spec_126.npy  spec_127.npy  spec_128.npy  spec_129.npy  spec_13.npy  spec_130.npy  spec_131.npy  spec_132.npy  spec_133.npy  (+946 more)
static/css/: style.css
static/js/: app.js
templates/: index.html  style.css
tests/: conftest.py  test_database.py  test_inference_utils.py  test_init.py  test_models.py
