[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-genre-detection"
version = "0.1.0"
description = "CNN-LSTM-Attention model for music genre classification"
authors = [{name = "Nada Ayman", email = "nadamo.cs@gmai.co"}, {name = "Omar Khaled", email = "omarkhaledali64@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | docs
)/
'''

[tool.isort]
profile = "black"
line_length = 100
include_trailing_comma = true
skip_glob = ["*/migrations/*"]
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
exclude = [
    ".venv/",
    "venv/",
    ".pytest_cache/",
    "__pycache__/",
]
disable_error_code = [
    "return-value",
    "assignment",
    "attr-defined",
    "index",
]

[tool.pylint.messages_control]
disable = [
    "C0111",
    "R0913",
    "R0903",
]

[tool.pylint.format]
max-line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\(Protocol\\):",
    "@(abc\\.)?abstractmethod",
]
